[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice frames/frame1_c2.png" type="Texture" id=1]
[ext_resource path="res://Assets/input-prompts-pixel-16/Tilemap/tilemap_packed.png" type="Texture" id=2]
[ext_resource path="res://Assets/RadioReceiverSwitch.png" type="Texture" id=3]
[ext_resource path="res://Assets/RadioReceiverSpeaker.png" type="Texture" id=4]
[ext_resource path="res://Assets/RadioReceiver.png" type="Texture" id=5]
[ext_resource path="res://Scripts/RadioMessageSystem.gd" type="Script" id=6]
[ext_resource path="res://Assets/kingthings-trypewriter-2/Kingthings Trypewriter 2.ttf" type="DynamicFontData" id=8]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 20, 0, 20, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=11]
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TextureButton/Speaker:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.4, 0.45, 0.5, 0.55, 0.75, 0.8, 0.85, 0.9, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.5, 1.55, 1.6, 1.65, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, 10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, 0.0, 10.0, 0.0, -10.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "message_is_done"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../TextureButton/Speaker:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("RichTextLabel:bbcode_text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "This is a test for the dialogue system." ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "TutorialStart"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../TextureButton/Speaker:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.151, 0.3, 0.35, 0.4, 0.45, 0.451, 0.6, 0.65, 0.7, 0.75, 0.85, 0.9, 0.95, 1, 1.1, 1.15, 1.2, 1.25, 1.251, 1.3, 1.35, 1.4, 1.45, 1.451, 1.6, 1.65, 1.7, 1.75, 1.751, 1.95, 2, 2.05, 2.1, 2.101, 2.25, 2.3, 2.35, 2.4, 2.401, 2.55, 2.6, 2.65, 2.7, 2.701, 2.8, 2.85, 2.9, 2.95, 2.951, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0, 10.0, 0.0, -10.0, -10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:bbcode_text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Welcome to artillery training! We make things go boom here. Shoot those targets!" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RichTextLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="RadioMessageSystem" type="Control"]
margin_right = 295.0
margin_bottom = 226.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 147.0
margin_bottom = 100.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaker" type="TextureRect" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 37.0
margin_right = -44.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 23, 23 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Switch" type="TextureRect" parent="TextureButton"]
margin_top = 27.0
margin_right = 40.0
margin_bottom = 67.0
texture = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPrompt" type="TextureRect" parent="TextureButton"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -23.0
margin_right = 6.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 20, 20 )
texture = SubResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -10.0
margin_right = 240.0
margin_bottom = 138.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "This is a test for the dialogue system."
text = "This is a test for the dialogue system."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog"]
anims/IntroDialogAnimation = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/TutorialStart = SubResource( 14 )

[node name="MessageHideTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="Dialog/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="MessageHideTimer" to="." method="_on_MessageHideTimer_timeout"]
